--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,4 @@
  * in the user guide at https://docs.gradle.org/5.1.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'mosig-ids-java-rmi'
-include 'common', 'client', 'server'
+rootProject.name = 'chatapp'
