Simple hello world between client and server

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ task runClient(type: JavaExec) {
     main = 'chatapp.client.Client'
     classpath = sourceSets.main.runtimeClasspath
     args 'localhost'
+    standardInput System.in
 }
 
 // Define the main class for the application
