--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 task runServer(type: JavaExec) {
     main = 'chatapp.server.Server'
     classpath = sourceSets.main.runtimeClasspath
+    args 'localhost'
+    standardInput System.in
 }
 
 task runClient(type: JavaExec) {
